# scoutbench

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA.md  LICENSE  README.md  build_repr_card_vaep.py  pyproject.toml  reproduce.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  leaderboard_submission.md
.github/workflows/: ci.yml
football_embed/: __init__.py
football_embed/data/: __init__.py  generate_stat_descriptions.py  xt_values.py
football_embed/evaluation/: __init__.py  bench.py  metrics.py  rerank.py  sb360_6mapnet_crossmatch.py  sb360_crossmatch_killtest.py  scoutbench.py  scoutbench_blockboot.py  scoutbench_extended.py  scoutbench_generalization.py  scoutbench_label_validity.py  scoutbench_metric_baseline.py  scoutbench_power.py  scoutbench_richfeatures.py  scoutbench_significance.py  text_retrieval_eval.py
football_embed/model/: __init__.py  text_branch.py
football_embed/training/: __init__.py  build_player_cards.py
paper/: PAPER.md  paper.tex  references.bib
release/: .gitignore  LEADERBOARD.md  SCHEMA.md  manifest.json  scoutbench_taskb_pairs.csv  scoutbench_taskb_pairs.parquet  scoutbench_taskb_players.csv
scoutbench/: __init__.py  evaluate.py  export_release.py
tests/: __init__.py  test_scoutbench.py
